// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DeviceFrame /> renders correctly 1`] = `
<div>
  <div
    className="device-content"
    onMouseDown={[Function]}
  >
    <div
      className="device-header-container"
    >
      <div
        className="device-header-bars"
      >
        <div
          className="device-header-bars-block device-header-bars-block--time"
        />
        <div
          className="device-header-bars-block device-header-bars-block--icons"
        >
          <i
            className="ui-icon ui-icon-signal fas fa-signal"
          />
          <i
            className="ui-icon ui-icon-wifi fas fa-wifi"
          />
          <i
            className="ui-icon ui-icon-battery-full fas fa-battery-full"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DeviceFrame /> renders correctly on mobile 1`] = `
<div>
  <div
    className="device-content"
    onMouseDown={[Function]}
  >
    <div
      className="device-header-container"
    >
      <div
        className="device-header-bars"
      >
        <div
          className="device-header-bars-block device-header-bars-block--time"
        />
        <div
          className="device-header-bars-block device-header-bars-block--icons"
        >
          <i
            className="ui-icon ui-icon-signal fas fa-signal"
          />
          <i
            className="ui-icon ui-icon-wifi fas fa-wifi"
          />
          <i
            className="ui-icon ui-icon-battery-full fas fa-battery-full"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DeviceFrame /> renders correctly with leftIndicator 1`] = `
<div
  className="device device-iphone-x device-black"
>
  <div
    className="device-frame"
  >
    <div
      className="device-content"
      onMouseDown={[Function]}
    >
      <div
        className="device-header-container"
      >
        <div
          className="device-header-bars"
        >
          <div
            className="device-header-bars-block device-header-bars-block--time"
          >
            <span>
              8:30
            </span>
          </div>
          <div
            className="device-header-bars-block device-header-bars-block--icons"
          >
            <i
              className="ui-icon ui-icon-signal fas fa-signal"
            />
            <i
              className="ui-icon ui-icon-wifi fas fa-wifi"
            />
            <i
              className="ui-icon ui-icon-battery-full fas fa-battery-full"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="device-stripe"
  />
  <div
    className="device-header"
  />
  <div
    className="device-sensors"
  />
  <div
    className="device-btns"
  />
  <div
    className="device-power"
  />
</div>
`;
